--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "language-hatena",
   "version": "0.0.0",
-  "description": "A short description of your language package",
+  "description": "Syntax highlighting and snippets for Hatena Notation (はてな記法).",
   "keywords": [
     "language",
-    "grammar"
+    "grammar",
+    "hatena"
   ],
-  "repository": "https://github.com/atom/language-hatena",
+  "repository": "https://github.com/fand/language-hatena",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
