--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-hatena",
   "version": "0.1.1",
-  "description": "Syntax highlighting and snippets for Hatena Notation (はてな記法).",
+  "description": "Syntax highlighting and snippets for Hatena Syntax (はてな記法).",
   "keywords": [
     "language",
     "grammar",
