--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "language-hatena",
   "version": "0.1.2",
   "description": "Syntax highlighting and snippets for Hatena Syntax (はてな記法).",
+  "main": "./lib/index.coffee",
+  "activationCommands": {
+    "atom-workspace": "language-hatena:convert-markdown-to-hatena"
+  },
   "keywords": [
     "language",
     "grammar",
@@ -11,5 +15,8 @@
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
+  },
+  "dependencies": {
+    "md2hatena": "0.0.0"
   }
 }
